--- a/q/272560.html
+++ b/q/272560.html
@@ -26,9 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>091</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
+<tr d-ix="0"><td>011</td><td>05AB1E</td><td>240414T084259Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272563#272563">Neil</a></td></tr>
+<tr d-ix="1"><td>091</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 91 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, 11 bytes</h1>
+<pre><code>∞ʒÓ∞D(.ι*O_
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f//Uce8U5MOTwZSLhp653Zq@cf//w8A" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a> Outputs the infinite sequence (well on TIO it will time out after about <code>13000</code>). Explanation: Port of @att's formula (numbers where the dot product of the prime factorisation exponents with the sequence of nonzero integers in order of absolute value is zero).</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 91 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=0,g=x=&gt;x%k?k&lt;i&amp;&amp;g(x,g[-i%k++||i]=z+=!g[k]):(z/2^-z%2)+g(x/k);k=2;z=1)g(++i)||print(i)
 </code></pre>
