--- a/q/272452.html
+++ b/q/272452.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>074</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
-<tr d-ix="1"><td>143</td><td>JavaScript Node.js</td><td>240411T225628Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272505#272505">2pichar</a></td></tr>
-<tr d-ix="2"><td>076</td><td>Perl5</td><td>240411T202146Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272502#272502">Martin K</a></td></tr>
+<tr d-ix="0"><td>076</td><td>Perl5</td><td>240411T202146Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272502#272502">Martin K</a></td></tr>
+<tr d-ix="1"><td>074</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
+<tr d-ix="2"><td>143</td><td>JavaScript Node.js</td><td>240411T225628Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272505#272505">2pichar</a></td></tr>
 <tr d-ix="3"><td>085</td><td>Ruby</td><td>240411T070528Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272490#272490">G B</a></td></tr>
 <tr d-ix="4"><td>076</td><td>APL+WIN</td><td>240410T110718Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272471#272471">Graham</a></td></tr>
 <tr d-ix="5"><td>084</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
@@ -45,7 +45,13 @@
 <tr d-ix="16"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
 <tr d-ix="17"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript, <s>81 78</s> 74 bytes</h1>
+<div id="pu0" class="pu"><h1>Perl5, 76 bytes</h1>
+<pre><code>sub c{$_%$_[0]?0:($_/=$_[0],1+&amp;c)}say'Fizz'x c(5).'Buzz'x(c 3)||$_ for 1..&lt;&gt;
+</code></pre>
+<p><a href="https://tio.run/##K0gtyjH9/7@4NEkhuVolXlUlPtog1t7ASkMlXt8WzNEx1FZL1qwtTqxUd8usqlKvUEjWMNXUU3cqBXE0khWMNWtqVOIV0vKLFAz19IwN/v//l19QkpmfV/xf19dUz8AQAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
+<p>(I was tempted to post <code>eval&lt;&gt;</code> (6 bytes) with some carefully crafted input, but I suspect there's already a rule against that.)</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript, <s>81 78</s> 74 bytes</h1>
 <p>-4 bytes thanks to myself...<br />
 -3 bytes thanks to Arnauld.</p>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=d=&gt;n%d?'':s+h(d,n/=d),g`Fizz`(3)+g`Buzz`(5)||n)+`
@@ -53,17 +59,11 @@
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN73SbPNs7fLU1NI08nQNNbU10m2Lbe0ybFOAgqop9urqVsXaGRopOnn6timaOukJbplVVQkaxpra6QlOpSCmqWZNTZ6mdgJXAsTErVzJ-XnF-Tmpejn56RppGoYGBpqa1hA5mK0A" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 143 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 143 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;{n-1&amp;&amp;f(n-1);console.log(n%3&amp;&amp;n%5?n:!(n%3)?'Fizz'.repeat(g(n,3,0)):''+!(n%5)?'Buzz'.repeat(g(n,5,0)):'')}
 g=(n,f,i)=&gt;!(n%f)?g(n/f,f,++i):i
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWN_vTbPNs7arzdA3V1NI0gJSmdXJ-XnF-TqpeTn66Rp6qsZpanqqpfZ6VIoijaa_ulllVpa5XlFqQmliiAVShY6xjoKlppa6uDVJhClThVIqmwhSqQrOWK90WyE_TydS0tQMpT9O0ByrQTwMKaWtnalplQpy1OU2joCg_ObW4WC-xKL0s2ihW0xoisyTayDQW6ngA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1>Perl5, 76 bytes</h1>
-<pre><code>sub c{$_%$_[0]?0:($_/=$_[0],1+&amp;c)}say'Fizz'x c(5).'Buzz'x(c 3)||$_ for 1..30
-</code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/7@4NEkhuVolXlUlPtog1t7ASkMlXt8WzNEx1FZL1qwtTqxUd8usqlKvUEjWMNXUU3cqBXE0khWMNWtqVOIV0vKLFAz19IwN/v//l19QkpmfV/xf19dUz8AQAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-<p>(I was tempted to post <code>eval&lt;&gt;</code> (6 bytes) with some carefully crafted input, but I suspect there's already a rule against that.)</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 85 bytes</h1>
 
