--- a/q/272452.html
+++ b/q/272452.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>076</td><td>Perl5</td><td>240411T202146Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272502#272502">Martin K</a></td></tr>
+<tr d-ix="0"><td>076</td><td>Perl 5</td><td>240411T202146Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272502#272502">Martin K</a></td></tr>
 <tr d-ix="1"><td>074</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
 <tr d-ix="2"><td>143</td><td>JavaScript Node.js</td><td>240411T225628Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272505#272505">2pichar</a></td></tr>
 <tr d-ix="3"><td>085</td><td>Ruby</td><td>240411T070528Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272490#272490">G B</a></td></tr>
@@ -45,11 +45,11 @@
 <tr d-ix="16"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
 <tr d-ix="17"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Perl5, 76 bytes</h1>
-<pre><code>sub c{$_%$_[0]?0:($_/=$_[0],1+&amp;c)}say'Fizz'x c(5).'Buzz'x(c 3)||$_ for 1..&lt;&gt;
+<div id="pu0" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 76 bytes</h1>
+
+<pre class="lang-perl prettyprint-override"><code>sub c{$_%$_[0]?0:($_/=$_[0],1+&amp;c)}say'Fizz'x c(5).'Buzz'x c(3)||$_ for 1..&lt;&gt;
 </code></pre>
-<p><a href="https://tio.run/##K0gtyjH9/7@4NEkhuVolXlUlPtog1t7ASkMlXt8WzNEx1FZL1qwtTqxUd8usqlKvUEjWMNXUU3cqBXE0khWMNWtqVOIV0vKLFAz19IwN/v//l19QkpmfV/xf19dUz8AQAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-<p>(I was tempted to post <code>eval&lt;&gt;</code> (6 bytes) with some carefully crafted input, but I suspect there's already a rule against that.)</p>
+<p><a href="https://tio.run/##K0gtyjH9/7@4NEkhuVolXlUlPtog1t7ASkMlXt8WzNEx1FZL1qwtTqxUd8usqlKvUEjWMNXUU3cqhXKMNWtqVOIV0vKLFAz19Gzs/v83NviXX1CSmZ9X/F/X11TPwBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript, <s>81 78</s> 74 bytes</h1>
 <p>-4 bytes thanks to myself...<br />
