--- a/q/272546.html
+++ b/q/272546.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>053</td><td>JavaScript V8</td><td>240413T224340Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272552#272552">l4m2</a></td></tr>
-<tr d-ix="1"><td>084</td><td>C gcc</td><td>240414T141835Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272571#272571">Mukundan</a></td></tr>
+<tr d-ix="0"><td>083</td><td>C gcc</td><td>240414T141835Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272571#272571">Mukundan</a></td></tr>
+<tr d-ix="1"><td>053</td><td>JavaScript V8</td><td>240413T224340Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272552#272552">l4m2</a></td></tr>
 <tr d-ix="2"><td>069</td><td>Matlab</td><td>240414T141534Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272570#272570">Xenox</a></td></tr>
 <tr d-ix="3"><td>061</td><td>Python 2</td><td>240413T191539Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272548#272548">pxeger</a></td></tr>
 <tr d-ix="4"><td>006</td><td>Vyxal</td><td>240414T041603Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272557#272557">lyxal</a></td></tr>
@@ -37,7 +37,13 @@
 <tr d-ix="8"><td>009</td><td>Jelly</td><td>240413T191502Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272547#272547">Jonathan</a></td></tr>
 <tr d-ix="9"><td>011</td><td>Vyxal 3</td><td>240413T205045Z</td><td><a href="https://codegolf.stackexchange.com/questions/272546/output-a-1-2-3-sequence/272550#272550">math sca</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 53 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 83 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>f(i,j,k){for(i=0;;k%3||printf(&quot;%d\n&quot;,i))for(k=__builtin_ctz(j=++i);j%3&lt;1;j/=3)k--;}
+</code></pre>
+<p><a href="https://tio.run/##FctLCsMgEADQq0hAmCFKElxOvUlBEoNhNLUl2E0@Z7fp@vG8XryvNQCrqBIe4b0B254oSXOen41zCdDI@ZkbxYh/Tta56ctr4ex82SHatmWkKM1joNhZg0lruupdxWvkDCgOEQBJXPUH" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 53 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=1;g=i=&gt;i%3?i&amp;-i:g(i/3*4);i++)g(i)%7-1||print(i)
 </code></pre>
@@ -59,13 +65,6 @@
 <hr />
 <p>For cardinality thing, obviously 1 can be chosen or unchosen, 5 can, 5<sup>2</sup> can...; = 2<sup>N</sup></p>
 <p>For density thing, <a href="https://tio.run/##FcxBCoAgEADA1wS7bZHlJZKtt0SQbkKFiSf/bnWa2xxrWp8tyB3bNJaynZGV2a8Awr2x7HmWyi9q6smCrx0aIUKw4HjA9kcjVjrnO8gZQRqir@gES3kB" rel="nofollow noreferrer">this solution goes to 0.472</a>, which I'd say far enough to reject 1/3 assumption</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 84 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>f(i,j,k){for(i=0;++i;k%3||printf(&quot;%d\n&quot;,i))for(k=__builtin_ctz(j=i);j%3&lt;1;j/=3)k--;}
-</code></pre>
-<p><a href="https://tio.run/##FcvRCsIgFAbgV5GBcA5TVnh58k0CaYbxa1kMu2nbs1vdf1@0txh7TwSTTeE1PReCP8g4Qop22/ZaUFuiQV/PdTBg/oviQ5jfuDfUENuHsgdL1u50lDx5x8Va2fsvqscFlVitKhGL2vsX" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
-<p>Port of <a href="https://codegolf.stackexchange.com/a/272550/91267">@math scat's answer</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.mathworks.com/products/matlab.html" rel="nofollow noreferrer">Matlab</a>, 69 bytes</h1>
 
