--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/120925.html">Whats the file extension?                       : 0120925</a>
 <a href="q/125383.html">Draw a big slash X                              : 0125383</a>
 <a href="q/272560.html">Output a 1-2-3-5-7... sequence                  : 0272560</a>
 <a href="q/49781.html">Extendify the ASCII Sun                         : 0049781</a>
