--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240414T161820Z
+"   /golfscore                                      20240414T162448Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/272569.html">Print all legal chess moves                     : 0272569</a>
+<a href="q/272546.html">Output a 1-2-3 sequence                         : 0272546</a>
 <a href="q/120925.html">Whats the file extension?                       : 0120925</a>
 <a href="q/125383.html">Draw a big slash X                              : 0125383</a>
 <a href="q/272560.html">Output a 1-2-3-5-7... sequence                  : 0272560</a>
 <a href="q/49781.html">Extendify the ASCII Sun                         : 0049781</a>
-<a href="q/272546.html">Output a 1-2-3 sequence                         : 0272546</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/272523.html">Maximum number of trailing zeros                : 0272523</a>
 <a href="q/51284.html">Draw an ASCII Lightning Bolt                    : 0051284</a>
