--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240414T183934Z
+"   /golfscore                                      20240414T184200Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/255850.html">8086 Segment Address to Linear                  : 0255850</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/116110.html">This challenge uses the  character              : 0116110</a>
 <a href="q/272569.html">Print all legal chess moves                     : 0272569</a>
