--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/248245.html">Make a list flat                                : 0248245</a>
 <a href="q/49781.html">Extendify the ASCII Sun                         : 0049781</a>
 <a href="q/118819.html">Swap the parity                                 : 0118819</a>
 <a href="q/255850.html">8086 Segment Address to Linear                  : 0255850</a>
